# BakkesMod

./: .gitignore  CMakeLists.txt  README.md  presets.data
data/: bakkesplugins_cars.sample.cfg
src/: ExpandedPresetsPlugin.cpp  ExpandedPresetsPlugin.h  PresetManager.cpp  PresetManager.h  PresetTypes.h
tools/: check_merge_conflicts.py  download_bakkesplugins_cars.py
